# msgraph-sdk-python

./: .gitignore  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile.txt  Pipfile  README.md  THIRD PARTY NOTICES  UPGRADING.md  app.py  mypy.ini  pyproject.toml  release-please-config.json  requirements-dev.txt  sample.py
.azure-pipelines/: cd-publish-python.yml  daily-ci-build.yml
.azurepipelines/: build.yml
.config/1espt/: PipelineAutobaseliningConfig.yml
.config/guardian/: .gdnbaselines
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/policies/: msgraph-sdk-python-branch-protection.yml  resourceManagement.yml
.github/workflows/: auto-merge-dependabot.yml  build.yml  build_publish.yml  codeql.yml  conflicting-pr-label.yml  create_v1_pull_request.yml  project-auto-add.yml  publish.yml  release-please-gha.yml  validate-public-api-surface.yml
docs/: applications_samples.md  authentication_samples.md  drives_samples.md  general_samples.md  groups_samples.md  samples.md  users_samples.md
msgraph/: __init__.py  _version.py  graph_request_adapter.py  graph_service_client.py
samples/: applications_samples.md  authentication_samples.md  drives_samples.md  general_samples.md  groups_samples.md  users_samples.md
scripts/: incrementMinorVersion.ps1
tests/: base.py
tests/integration/: base.py  refactor_base_collection_pagination_responses.py  test_site_page_request_builder.py  test_user_request_builder.py
tests/unit/: test_user_collection_response.py
tests/unit/resources/: next_users.json  users.json
